--- a/article.html
+++ b/article.html
@@ -185,11 +185,11 @@
                         82 статьи
                     </div>
                 </div>
-                <div class="text__author-second">
-                    <a href="#" class="text__link">
+                <a href="#" class="text__link">
+                    <div class="text__author-second">
                         Страница автора
-                    </a>
-                </div>
+                    </div>
+                </a>
             </div>
             <p class="text__paragraph text__paragraph-first">
                 МИдейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших направлений развития. <br>
@@ -429,7 +429,7 @@
     </section>
     <!-- /.articles -->
 
-    <section class="comments">
+    <section id="comments" class="comments">
         <div class="container comments__container">
             <h2 style="display: none;">Комментарии</h2>
             <div class="comments__first">
