--- a/index.html
+++ b/index.html
@@ -372,15 +372,15 @@
                     </div>
                     <div class="third__line">
                     </div>
-                    <div class="third__second">
-                        <a href="#" class="others__links">
+                    <a href="#" class="others__links" style="display: block;">
+                        <div class="third__second">
                             <div class="third__second-block">
                                 <img src="img/download.svg" alt="Icon: download" class="third__second-img">
                                 <span class="third__second-text">Скачать</span>
                             </div>
-                        </a>
-                    </div>
-                    <!-- /.third__second -->
+                        </div>
+                        <!-- /.third__second -->
+                    </a>
             </div>
             <!-- /.others__third -->
             <div class="others__forth forth grid-four">
@@ -892,11 +892,11 @@
                 </div>
                 <!-- /.seconds__container -->
                 <div class="seconds__devide"></div>
-                <div class="seconds__heading-a">
-                    <a href="#" class="seconds__link">
+                <a href="#" style="display: block;" class="seconds__link">
+                    <div class="seconds__heading-a">
                         Read more
-                    </a>
-                </div>
+                    </div>
+                </a>
             </div>
             <!-- /.news__second -->
         </div>
