--- a/thankyou.html
+++ b/thankyou.html
@@ -164,9 +164,9 @@
         <div class="container error__container">
             <h2 style="display: none;">Thank you!</h2>
             <div class="error__title">
-                Thank you!
+                Спасибо!
                 <button class="error__button">
-                    Return to main page
+                    Вернуться назад
                 </button>
             </div>
         </div>
